--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="col-lg-12">
             <p class="lead mb-0">Final year Computer Engineering Undergraduate from the National University of Singapore (NUS).
                 <br> I am an aspiring Computer Vision Engineer and have worked on several real world Computer Vision related projects during my course of study.
-                <br> I am also currently working on my final year project: Deep Learning for Scene Understanding under the supervision of Assoc. Prof Xiang Cheng where I am working on improving scene classification techniques utilising both deep learning and traditional computer vision techniques.
+                <br> I am also currently working on my final year project: Deep Learning for Scene Understanding, to enhance scene classification techniques.
             </p>
           </div>
         </div>
@@ -103,7 +103,7 @@
         </div>
       </div> -->
       <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/gff_goodvision.png');"></div>
+        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/gff_goodvision.png'); background-repeat:no-repeat;background-size: 100%;"></div>
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Good For Food</h2>
           <p class="lead mb-0"> <b>Software Engineer (Computer Vision / Machine Learning)</b></p>
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/driven_logo_big.png');"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/driven_logo_big.png'); background-repeat:no-repeat;background-size: 100%;"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Driven</h2>
           <p class="lead mb-0"> <b>Android Developer Intern</b></p>
@@ -128,18 +128,26 @@
       <div class="container-fluid p-0 text-center">
         
         <h1 class="mb-5">Projects</h1>
-        
+
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/fyp_scene.png');"></div>
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/pyImgLabel.png'); background-repeat:no-repeat;background-size: 100%;"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Final Year Project (NUS)</h2>
-            <p class="lead mb-0"> <b>Deep Learning for Scene Understanding</b></p>
-            <p class="lead mb-0">Improve existing scene classifiers by addressing issues such as label ambiguity and intra-class variations.
-              This was achieved by utilising both deep learning and traditional computer vision techniques.</p>
+            <h2>pyImgLabel</h2>
+            <p class="lead mb-0"> <b>Image annotation system for multi-label image classification</b></p>
+            <p class="lead mb-0">pyLabel is a crossplatform multi-label image annotation system that utilises the PyQt framework.</p>
+            </p>
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/orbital_project.png');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/fyp_scene.png'); background-repeat:no-repeat;background-size: 100%;"></div>
+          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+            <h2>Final Year Project (NUS)</h2>
+            <p class="lead mb-0"> <b>Deep Learning for Scene Understanding</b></p>
+            <p class="lead mb-0">Currently working on improving scene classification by addressing issues such as label ambiguity and intra-class variations.</p>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/orbital_project.png'); background-repeat:no-repeat;background-size: 100%;"></div>
           <div class="col-lg-6 my-auto showcase-text">
             <h2>Orbital - NUS School of Computing</h2>
             <p class="lead mb-0"> <b>Software Engineer (Computer Vision / Machine Learning)</b></p>
@@ -149,7 +157,7 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/nyp_drone.png');"></div>
+          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/nyp_drone.png'); background-repeat:no-repeat;background-size: 100%;"></div>
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Final Year Project (NYP)</h2>
             <p class="lead mb-0"> <b>Man-machine interface for autonomous drones</b></p>
