Add vebits description

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
       
       <h1 class="mb-5">Work Experiences</h1>
       
-      <!-- <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/bg-showcase-1.jpg');"></div>
+      <div class="row no-gutters">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/vebits_logo.png'); background-repeat:no-repeat;background-size: 100%;"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Vebits AI</h2>
           <p class="lead mb-0"> <b>Computer Vision Engineer Intern</b></p>
-          <p class="lead mb-0">As a summer intern, I was involved in the development of a real time driver behavior monitoring system where I developed a data collection pipeline for image annotation, experiment and evaluate on various deep learning / computer vision approaches as well as model inference quantisation for real time detection on edge devices.</p>
+          <p class="lead mb-0">I was involved in the development of an end-to-end driver behavior monitoring system. I was involved in developing the data collection pipeline which consisits of both hand and machine labelled images, tested and evaluated various deep learning models and developed software for deployment.</p>
         </div>
-      </div> -->
+      </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/gff_goodvision.png'); background-repeat:no-repeat;background-size: 100%;"></div>
         <div class="col-lg-6 my-auto showcase-text">
@@ -135,6 +135,8 @@
             <h2>pyImgLabel</h2>
             <p class="lead mb-0"> <b>Image annotation system for multi-label image classification</b></p>
             <p class="lead mb-0">pyLabel is a crossplatform multi-label image annotation system that utilises the PyQt framework.</p>
+            <br>
+            <a class="btn btn-link btn-lg" href="https://github.com/luishengjie/pyImgLabel" target="_blank" >View Project</a>
             </p>
           </div>
         </div>
