Add resume and links to external sites

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">Hi, I'm Sheng Jie</h1>
+          <h1 class="mb-5">Hello, my name is Sheng Jie</h1>
           <h5>Computer Vision / Software Engineer</h5>
         </div>
       </div>
@@ -51,10 +51,11 @@
         <h2 class="mb-5">Profile</h2>
         <div class="row">
           <div class="col-lg-12">
-            <p class="lead mb-0">Final year Computer Engineering Undergraduate from the National University of Singapore (NUS).
-                <br> I am an aspiring Computer Vision Engineer and have worked on several real world Computer Vision related projects during my course of study.
-                <br> I am also currently working on my final year project: Deep Learning for Scene Understanding, to enhance scene classification techniques.
+            <p class="lead mb-0">I am a final year Computer Engineering Undergraduate from the National University of Singapore (NUS) and have worked on several real world Computer Vision related projects during my course of study.
+                <br> I am currently working on my final year project: Deep Learning for Scene Understanding, to enhance scene classification techniques.
             </p>
+            <br>
+            <a class="btn btn-link btn-lg" href="documents/luishengjie_CV_2019.pdf" target="_blank" >Download Resume</a>
           </div>
         </div>
       </div>
@@ -68,7 +69,7 @@
         <div class="col-lg-6">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
+              <i class="fas fa-code m-auto text-primary"></i>
             </div>
             <h3>Software Development</h3>
             <p class="lead mb-0">Experience in Python, Java and C. Familiar with software development frameworks such as PyQt and Android.</p>
@@ -77,10 +78,10 @@
         <div class="col-lg-6">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
+              <i class="fas fa-brain m-auto text-primary"></i>
             </div>
             <h3>Deep Learning</h3>
-            <p class="lead mb-0">Experience with Deep Learning frameworks such as PyTorch, TensorFlow and Keras.</p>
+            <p class="lead mb-0">Experience with Deep Learning algorithms and frameworks such as PyTorch, TensorFlow and Keras.</p>
           </div>
         </div>
         
@@ -199,23 +200,23 @@
           <p class="text-muted small mb-4 mb-lg-0">&copy; Lui Sheng Jie 2019. All Rights Reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
-          <!-- <ul class="list-inline mb-0">
-            <li class="list-inline-item mr-3">
+          <ul class="list-inline mb-0">
+            <!-- <li class="list-inline-item mr-3">
               <a href="#">
                 <i class="fab fa-facebook fa-2x fa-fw"></i>
               </a>
-            </li>
+            </li> -->
             <li class="list-inline-item mr-3">
-              <a href="#">
-                <i class="fab fa-twitter-square fa-2x fa-fw"></i>
+              <a href="https://github.com/luishengjie" target="_blank">
+                <i class="fab fa-github fa-2x fa-fw"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-instagram fa-2x fa-fw"></i>
+              <a href="https://linkedin.com/in/luishengjie" target="_blank">
+                <i class="fab fa-linkedin fa-2x fa-fw"></i>
               </a>
             </li>
-          </ul> -->
+          </ul>
         </div>
       </div>
     </div>
