--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <h2 class="mb-5">Profile</h2>
         <div class="row">
           <div class="col-lg-12">
-            <p class="lead mb-0">I am a final year Computer Engineering Undergraduate from the National University of Singapore (NUS) and have worked on several real world Computer Vision related projects during my course of study.
-                <br> I am currently working on my final year project: Deep Learning for Scene Understanding, to enhance scene classification techniques.
+            <p class="lead mb-0">I am a final year Computer Engineering Undergraduate from the National University of Singapore (NUS). 
+                <br> Throughout my course of study I had the opportunity to worked on several real world Computer Vision related projects.
+                <br> Currently, I am working on my final year project <b>Deep Learning for Scene Understanding</b> which seeks to enhance scene classification techniques.
             </p>
             <br>
             <a class="btn btn-link btn-lg" href="documents/luishengjie_CV_2019.pdf" target="_blank" >Download Resume</a>
@@ -108,8 +109,8 @@
         <div class="col-lg-6 my-auto showcase-text">
           <h2>Good For Food</h2>
           <p class="lead mb-0"> <b>Software Engineer (Computer Vision / Machine Learning)</b></p>
-          <p class="lead mb-0">As part of a 6 months NUS Overseas College (Singapore) programme, I designed and developed their prototype for food waste image recognition.
-            <br> I was also involved in technical demostrations to clients and investors.
+          <p class="lead mb-0">I was involved in research and experiment on machine learning models for food waste image recognition.
+            and was responsible for the design and developed of the company's initial prototype for food waste image recognition.
           </p>
         </div>
       </div>
@@ -164,16 +165,13 @@
           <div class="col-lg-6 order-lg-1 my-auto showcase-text">
             <h2>Final Year Project (NYP)</h2>
             <p class="lead mb-0"> <b>Man-machine interface for autonomous drones</b></p>
-            <p class="lead mb-0">As part of my Final Year Project, I was involved in the development of a man-machine interface for an Autonomous Aerial Vehicle.
+            <p class="lead mb-0">As part of my Final Year Project, I was involved in the development of a man-machine interface for an Autonomous Aerial Vehicle. The system was implemented utilising ROS (Robotic Operating System).
 
             </p>
           </div>
         </div>
       </div>
-      <!-- <a class="btn btn-info btn-xlarge" href="#">Download CV</a> -->
     </section>
-    
-  
 
   <!-- Footer -->
   <footer class="footer bg-light">
