Update vebits profile

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h1 class="mb-5">Work Experiences</h1>
       
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/vebits_logo.png'); background-repeat:no-repeat;background-size: 100%;"></div>
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/vebits_project.png'); background-repeat:no-repeat;background-size: 100%;"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2>Vebits AI</h2>
           <p class="lead mb-0"> <b>Computer Vision Engineer Intern</b></p>
